force-app/main/default/objects/IFI_project_demographics__c/IFI_project_demographics__c.object-meta.xml
<CustomObject>
    <label>Project Demographic</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Demographics</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>