force-app/main/default/objects/IFI_project_demographics__c/fields/IFI_Accounting_Location__c.field-meta.xml
<CustomField>
    <fullName>IFI_Accounting_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accounting Location</label>
    <referenceTo>IFI_Location__c</referenceTo>
    <relationshipLabel>Project Demographics</relationshipLabel>
    <relationshipName>Project_Demographics</relationshipName>
    <type>Lookup</type>
</CustomField>