force-app/main/default/objects/IFI_project_demographics__c/fields/IFI_inactive__c.field-meta.xml
<CustomField>
    <fullName>IFI_inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>