force-app/main/default/objects/IFI_project_demographics__c/fields/IFI_Intaact_Location__c.field-meta.xml
<CustomField>
    <fullName>IFI_Intaact_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intaact Location</label>
    <referenceTo>IFI_Location__c</referenceTo>
    <relationshipLabel>Project Demographics Locations</relationshipLabel>
    <relationshipName>Project_Demographics_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>