force-app/main/default/objects/IFI_project_demographics__c/fields/IFI_Intacct_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>IFI_Intacct_Project_ID__c</fullName>
    <label>Intacct Project ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>