force-app/main/default/objects/IFI_project_demographics__c/fields/IFI_Portfolio_Demographic__c.field-meta.xml
<CustomField>
    <fullName>IFI_Portfolio_Demographic__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Portfolio Demographic</label>
    <referenceTo>IFI_Portfolio_Demographic__c</referenceTo>
    <relationshipLabel>Project Demographics</relationshipLabel>
    <relationshipName>IFI_Project_Demographics</relationshipName>
    <type>Lookup</type>
</CustomField>