force-app/main/default/objects/IFI_project_demographics__c/fields/IFI_Project_Demographic_Status__c.field-meta.xml
<CustomField>
    <fullName>IFI_Project_Demographic_Status__c</fullName>
    <defaultValue>&apos;Draft&apos;</defaultValue>
    <label>Project Demographic Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Approved_pre_Execution_Plan</fullName>
                <label>Approved - pre-Execution Plan</label>
            </value>
            <value>
                <fullName>Pending Execution Plan</fullName>
            </value>
            <value>
                <fullName>Execution Plan</fullName>
            </value>
            <value>
                <fullName>Created</fullName>
                <isActive>false</isActive>
                <label>Created</label>
            </value>
            <value>
                <fullName>Pending DC/AC Ratio</fullName>
                <isActive>false</isActive>
                <label>Pending DC/AC Ratio</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>