force-app/main/default/objects/IFI_project_demographics__c/fields/IFI_project_owner__c.field-meta.xml
<CustomField>
    <fullName>IFI_project_owner__c</fullName>
    <label>Project Owner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3rd Party Owner</fullName>
            </value>
            <value>
                <fullName>Acquisition</fullName>
            </value>
            <value>
                <fullName>Aligned Climate Capital</fullName>
            </value>
            <value>
                <fullName>Avangrid Renewables</fullName>
            </value>
            <value>
                <fullName>Birch Creek</fullName>
            </value>
            <value>
                <fullName>Capital Dynamics</fullName>
            </value>
            <value>
                <fullName>CarVal</fullName>
            </value>
            <value>
                <fullName>Churchill</fullName>
            </value>
            <value>
                <fullName>City of Knoxville</fullName>
            </value>
            <value>
                <fullName>Clean Energy Collective</fullName>
            </value>
            <value>
                <fullName>Clearway</fullName>
            </value>
            <value>
                <fullName>ConEd</fullName>
            </value>
            <value>
                <fullName>Cooperative Solar</fullName>
            </value>
            <value>
                <fullName>Cubico</fullName>
            </value>
            <value>
                <fullName>D.E. Shaw</fullName>
            </value>
            <value>
                <fullName>DNA Renewables</fullName>
            </value>
            <value>
                <fullName>Delaware River</fullName>
            </value>
            <value>
                <fullName>Development Partner Retained Site</fullName>
            </value>
            <value>
                <fullName>Dominion</fullName>
            </value>
            <value>
                <fullName>EDPR</fullName>
            </value>
            <value>
                <fullName>Energix</fullName>
            </value>
            <value>
                <fullName>Enerparc Solar</fullName>
            </value>
            <value>
                <fullName>Excelsior Energy Capital</fullName>
            </value>
            <value>
                <fullName>FLS - Sold</fullName>
            </value>
            <value>
                <fullName>Florida Power &amp; Light</fullName>
            </value>
            <value>
                <fullName>ForeFront Power</fullName>
            </value>
            <value>
                <fullName>Franklin Park</fullName>
            </value>
            <value>
                <fullName>GCMC Solar Power</fullName>
            </value>
            <value>
                <fullName>Galehead Development</fullName>
            </value>
            <value>
                <fullName>Gardner Solar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>