force-app/main/default/objects/IFI_project_demographics__c/fields/IFI_ProjectID__c.field-meta.xml
<CustomField>
    <fullName>IFI_ProjectID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Project ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>