force-app/main/default/objects/IFI_project_demographics__c/fields/Is_Recycle_Bin__c.field-meta.xml
<CustomField>
    <fullName>Is_Recycle_Bin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Recycle Bin</label>
    <type>Checkbox</type>
</CustomField>