force-app/main/default/objects/IFI_project_demographics__c/fields/Project_Demographic_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Project_Demographic_ID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Demographic ID 18</label>
    <type>Text</type>
</CustomField>